# OniTabulator

./: .gitignore  oni_tabulator.ipynb  pyproject.toml  tabulator_gui.ipynb
src/oni_tabulator/: OniTabulator.py  __init__.py
src/tabulator_gui/: TabulatorGUI.py  __init__.py
